Se utiliza ahora useReducer y se implemento carga sincronizada

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
           <div class="container__right" id="root"></div>
         </div>
         <div id="modal_root"></div>
+        <!-- <div id="modalAlert_root"></div> -->
       </div>
     </div>
   </body>
